@@ -7,8 +7,6 @@ module Neo4j
     include ActiveModel::Serializers::Xml
     include ActiveModel::Serializers::JSON
 
-    include Neo4j::Shared::Identity
-
     module ClassMethods
       def neo4j_session_name (name)
         @neo4j_session_name = name
@@ -18,7 +16,7 @@ module Neo4j
         if @neo4j_session_name
           Neo4j::Session.named(@neo4j_session_name) || raise("#{self.name} is configured to use a neo4j session named #{@neo4j_session_name}, but no such session is registered with Neo4j::Session")
         else
-          Neo4j::Session.current
+          Neo4j::Session.current!
         end
       end
     end
